/**
 * Datastructure representing one rsa key.
 */
export interface RsaKey {
    divisor: number;
    exponent: number;
}